Added new features or updated files

--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
             mechanism & prospects to learn <span class="text-col">cyber security</span>
           </h2>
       
-          <button class="mt-3 btn3 col-lg-4 p-2 d-flex flex-row align-items-center justify-content-center">
+          <!-- <button class="mt-3 btn3 col-lg-4 p-2 d-flex flex-row align-items-center justify-content-center">
             Inception Of Cybron
             <i class="fa-solid fa-arrow-right icon-hover"></i>
-          </button>
+          </button> -->
         </div>
       </div>
     </div>
