--- a/index.html
+++ b/index.html
@@ -526,63 +526,66 @@ DISCOVER NOW
 
 
 <!-- SUCESS SECTION START -->
-<div class="container-fluid bg py-5">
-    <div class="row py-5">
-        <div class="col-lg-6 d-flex flex-column align-items-lg-start align-items-center justify-content-center">
-<h6 class="col-org">- Why Choose Us</h6>
-<h2 class="display-4  mt-3 text-lg-start text-center mb-lg-0 mb-5">
+<div class="container-fluid px-4   d-flex flex-lg-row flex-column  sucees-page my-5">
+ 
+        <div class="col-lg-6 px-lg-4   d-flex py-5 flex-column align-items-lg-start align-items-center justify-content-center suc1">
+<h6 class="text-white">- Why Choose Us</h6>
+<h3 class="display-5 fw-bold  text-white  mt-3 text-lg-start text-center mb-lg-0 mb-5">
     We Have a Lot of Skills in Cyber Security
-</h2>
+</h3>
 </div>
-      <div class="col-lg-6 d-flex flex-column justify-content-center">
-  <div class="d-flex flex-lg-row  flex-column gap-3">
-    <div class="col-lg-5 col-12 br1 py-3 px-1  d-flex flex-row gty">
-        <div class="br pe-3 pt-1 mx-1 br2">
+      <div class="col-lg-6 d-flex py-5 flex-column justify-content-center suc2">
+  <div class="d-flex flex-lg-row  flex-column ">
+    <div class="col-lg-6 col-12 br1 py-3 px-1  d-flex flex-row gty">
+        <div class="br pe-3 pt-1 mx-1 br2 d-flex flex-row">
             <i class="fa-solid fa-id-card-clip"></i>
         </div>
 
   <div class="text-start ">
-    <h2 class=" text-white">999</h1>
-    <span class=" text-white">ENGAGED PROFESSIONAL</span>
+    <h2 class=" ">999</h1>
+    <span class="trter">ENGAGED PROFESSIONAL</span>
   </div>
-    </div>
-    <div class="col-lg-5 col-12 br1 py-3 px-1  d-flex flex-row gty">
+   
+</div>
+    <div class="col-lg-6 col-12 br1 py-3 px-1  d-flex flex-row gty">
         <div class="br pe-3 pt-1 mx-1 br2">
           <i class="fas fa-smile"></i>
         </div>
 
   <div class="text-start ">
-    <h2 class=" text-white">100K</h1>
-    <span class=" text-white">Happy <br> Student</span>
+    <h2 class=" ">100K</h1>
+    <span class="">Happy Student</span>
   </div>
-    </div>
+
+</div>
   </div>
-  <div class="d-flex flex-lg-row mt-3 flex-column gap-3">
-    <div class="col-lg-5 col-12 br1 py-3 px-1  d-flex flex-row gty">
+  <div class="d-flex flex-lg-row  flex-column">
+    <div class="col-lg-6 col-12 br1 py-3 px-1  d-flex flex-row gty">
         <div class="br pe-3 pt-1 mx-1 br2">
           <i class="fa-solid fa-user"></i>
         </div>
 
   <div class="text-start ">
-    <h2 class=" text-white">100K</h1>
-    <span class=" text-white">Certified <br> Students</span>
+    <h2 class=" ">100K</h1>
+    <span class=" ">Certified  Students</span>
   </div>
     </div>
-    <div class="col-lg-5 col-12 br1 py-3 px-1  d-flex flex-row gty">
+    <div class="col-lg-6 col-12 br1 py-3 px-1  d-flex flex-row gty">
         <div class="br pe-3 pt-1 mx-1 br2">
           <i class="fa-solid fa-award"></i>
         </div>
 
   <div class="text-start ">
-    <h2 class=" text-white">56</h1>
-    <span class=" text-white">Winning <br> Award</span>
+    <h2 class=" ">56</h1>
+    <span class=" ">Winning Award</span>
   </div>
     </div>
   </div>
       </div>
      
-    </div>
+   
 </div>
+
 <!-- SUCESS SECTION END -->
 <!-- TESTIMONIAL -->
  <div class="container-fluid my-5 d-flex flex-lg-row flex-column justify-content-center align-items-center testimoina">
