Landing-Page Done

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <img src="assets/logo.png" alt="" class="col-lg-5 col-5" /> <!-- Replace with actual logo path -->
         </a>
         <button class="btn d-lg-none navbar-expand-lg" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-          <i class="fa-solid fa-bars text-white"></i>
+          <i class="fa-solid fa-bars text-dark"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
@@ -394,62 +394,46 @@
     </div>
   </div>
    </div>
-    <!-- MAIN 1 END-->
 
-    <!-- MAIN 2 START-->
-     <div class="container mt-5 pt-5">
-        <div class="col-12  mt-4 pt-5 d-flex flex-lg-row flex-column align-items-center justify-content-between">
-            <h2 class="mb-4 col-lg-6 col-12 text-start col-org">Our Approach</h3>
-            <p class="col-lg-6 col-12 text-end col-text">
-                Cybron is one of the leading learning frameworks of cyber security, which equips the candidates from grade 6 standard to professional level. The curriculum explains the fundamentals and basics of cyber security .
-            </p>
-        </div>
-     </div>
-    <!-- MAIN 2 END-->
 
     <!-- APPROACH SECTION START-->
-     <div class="container-fluid px-4 d-flex flex-lg-row flex-column mt-4">
-        <div class="col-lg-6 position-relative">
-            <img src="assets/app.png" class="img-fluid i4" alt="">
-          
-        </div>
-        <div class="col-lg-6 ps-3 d-flex flex-column justify-content-center">
-            <h5 class=" pb-5 "> 
-                Without stopping for a moment we give you best technology experience discussing from our expertise  </h5>
+     <div class="container-fluid px-4 d-flex flex-lg-row flex-column mt-4 my-5 py-5 aplomno">
+    <div class="col-lg-6 col-12 d-flex flex-column">
+      <h4 class="mb-4 col-lg-6 col-12 text-start col-org">Our Approach</h4>
+      <h2 class="fs-1">Exclusive Technology to Provide IT Solutions & Services</h2>
+<p><span class="col-org display-6">25 </span>Years’ of Professional Training & <br> Consulting Experience</p>
+<span class="border-1 col-12 mt-4 "></span>
+<span class="mb-1 span12">
+  <i class="fa-solid fa-check col-org pe-2"></i>
+  <span>Trusted Patner</span>
+</span>
+<span  class="mb-1 span12">
+  <i class="fa-solid fa-check col-org pe-2"></i>
+  <span>Product Security</span>
+</span>
+<span  class="mb-1 span12">
+  <i class="fa-solid fa-check col-org pe-2"></i>
+  <span>System Security</span>
+</span><span  class="mb-2  span12">
+  <i class="fa-solid fa-check col-org pe-2"></i>
+  <span>Operational Security</span>
+</span>
+<p class="colb mt-1 col-text span12">
+  Our teams know how to harness the power of data, artificial intelligence, modernising core
+</p>
+<button class="mt-3 btn3 col-lg-4 p-2 d-flex flex-row align-items-center justify-content-center">
+ ABOUT-US
+ <i class="fa-solid fa-paper-plane icon-hover"></i>
+  <!-- <i class="fa-solid fa-arrow-right icon-hover"></i> -->
+</button>
 
-            <div class="col-12 d-flex justify-content-between gap-1">
-                <div class="col-6  appdiv shadow-lg p-3 position-relative">
-                    <h5>Trusted Patner</h5>
-                    <p class="col-text"> sed diam nonumy eirmod tempor invidunt ut labore et.</p>
-<div class="aphov position-absolute top-0  start-0">
+    </div>
+    <div class="col-lg-6 col-12 position-relative io mt-lg-0 mt-4">
+<img src="assets/appro (1).jpg" class="img-fluid col-lg-10 col-12 io1" alt="">
 
-</div>
-                </div>
-                <div class="col-6  appdiv shadow-lg p-3 position-relative">
-                    <h5>Product Security</h5>
-                    <p class="col-text">sed diam nonumy eirmod tempor invidunt ut labore et.</p>
-                    <div class="aphov position-absolute top-0  start-0">
+<img src="assets/appro (2).png" class="img-fluid col-lg-6  io2" alt="">
 
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 d-flex justify-content-between gap-1">
-                <div class="col-6  appdiv shadow-lg p-3 position-relative">
-                    <h5>System Security</h5>
-                    <p class="col-text">sed diam nonumy eirmod tempor invidunt ut labore et.</p>
-                    <div class="aphov position-absolute top-0  start-0">
-
-                    </div>
-                </div>
-                <div class="col-6 appdiv shadow-lg p-3 position-relative">
-                    <h5>Operational Security</h5>
-                    <p class="col-text">sed diam nonumy eirmod tempor invidunt ut labore et.</p>
-                    <div class="aphov position-absolute top-0  start-0">
-
-                    </div>
-                </div>
-            </div>
-        </div>
+    </div>
 
     </div>
     <!-- APPROACH SECTION END-->
@@ -474,10 +458,12 @@ DISCOVER NOW
 
     <!-- COURSE SECTION START -->
     <div class="container mt-2">
-        <div class="col-12 mx-auto mt-4 pt-5 d-flex flex-row align-items-center">
-            <h2 class="mb-4 color-blue col-6 text-start">Cybersecurity Services</h3>
-            <p class="col-lg-6 text-end">
-                You Can Protect Your Organization’s Cybersecurity By Services Us   </p>
+        <div class="col-12 mx-auto mt-4 pt-5 d-flex flex-column align-items-center justify-content-center">
+          <span class="mb-4 col-lg-6 col-12 text-center col-org text-uppercase ">What We Do</span>
+
+            <h2 class="col-lg-7 pb-5 col-12 text-center">
+              Reach out to the world’s most <br>
+            <span class="col-org">demanding Syllabus & Curriculum.</span>   </h2>
         </div>
      </div>
 
