--- a/cybron/why.html
+++ b/cybron/why.html
@@ -217,10 +217,10 @@
             
             <!--  -->
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="blog.html">Blog</a>
+              <a class="nav-link" aria-current="page" href="/blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="contact.html">Contact Us</a>
+              <a class="nav-link" aria-current="page" href="/contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
