Updated code with new changes

--- a/cybron/evolution.html
+++ b/cybron/evolution.html
@@ -138,9 +138,11 @@
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+              <span class="navhover"></span>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Cybron</a>
+              <span class="navhover"></span>
               <ul class="dropdown-menu mx-auto">
                 <li>
                   <a class="dropdown-item nav-link" href="about.html">About Cybron</a>
@@ -164,7 +166,7 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Memberships</a>
-            
+              <span class="navhover"></span>
               <ul class="dropdown-menu mx-auto">
                 <li>
                   <a class="dropdown-item nav-link" href="memberships/ScoutMemberships.html">Cybron Scout Memberships</a>
@@ -182,6 +184,7 @@
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Get Started Certifications
               </a>
+              <span class="navhover"></span>
               <ul class="dropdown-menu dropdown-large py-3  p-3 mx-auto">
                 <div class="container d-flex flex-row ">
                   <!-- Cybron Scout Certifications -->
@@ -228,9 +231,11 @@
             <!--  -->
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/blog.html">Blog</a>
+              <span class="navhover"></span>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/contact.html">Contact Us</a>
+              <span class="navhover"></span>
             </li>
           </ul>
           <form class="d-flex" role="search">
