--- a/cybron/about.html
+++ b/cybron/about.html
@@ -24,7 +24,7 @@
  <title>About US – Cybron Security</title>
  <style>
     .aboutback{
-        background-image: url("/assets/about-us.png");
+        background-image: url("/assets/evulation\ \(1\).png");
         transform: scale(0.99.9) !important;
   transition: 0.9s ease-in-out !important;
   background-position: center !important;
