--- a/cybron/about.html
+++ b/cybron/about.html
@@ -24,16 +24,18 @@
  <title>About US – Cybron Security</title>
  <style>
     .aboutback{
-        background-image: url("/assets/evulation\ \(1\).png");
-        transform: scale(0.99.9) !important;
+        background-image: url("/assets/evulation\ \(3\).png");
+        transform: scale(1) !important;
   transition: 0.9s ease-in-out !important;
   background-position: center !important;
   object-fit: cover !important;
+  box-sizing: border-box !important;
   background-size: cover !important;
   background-repeat: no-repeat;
   background-attachment: fixed !important;
   height: 70vh;
     }
+ 
     .card-text {
         text-transform: lowercase;
         color: rgb(177, 177, 177);
@@ -292,7 +294,6 @@ data-bs-ride="carousel"
   <h2 class=" text-center text-col display-4 fw-bold mb-3 mt-5 ">About Cybron</h2>
   <h5 class=" text-center text-col fw-normal mt-2 col-lg-9 col-12"
 >
-Cybron is one of the learning framework that provides the learning and understanding of cyber security from grassroot level and its starts from class 6th standards and gear up to the professional level.
 </h5>
 </div>
 </div>
