--- a/cybron/framework.html
+++ b/cybron/framework.html
@@ -107,7 +107,7 @@ transition: 0.8s ease-in-out !important;
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg px-0 py-0 container-fluid" id="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/index.html">
           <img src="/assets/logo.png" alt="" class="col-lg-5 col-5" /> <!-- Replace with actual logo path -->
         </a>
         <button class="btn d-lg-none navbar-expand-lg" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
@@ -116,7 +116,7 @@ transition: 0.8s ease-in-out !important;
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link"  href="/index.html">Home</a>
               <span class="navhover"></span>
             </li>
             <li class="nav-item dropdown">
