Updated code with new changes

--- a/cybron/about.html
+++ b/cybron/about.html
@@ -221,62 +221,107 @@
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
       <h5 id="offcanvasRightLabel">
-        <img src="logo.png" alt="" class="col-lg-5 col-5" /> <!-- Replace with actual logo path -->
+        <img src="/assets/logo.png" alt="" class="col-lg-5 col-5" /> <!-- Replace with actual logo path -->
       </h5>
       <!-- <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button> -->
     </div>
     <div class="offcanvas-body">
-      <ul class="navbar-nav d-flex justify-content-center flex-column">
+      <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Home</a>
+          <a class="nav-link" aria-current="page" href="/index.html">Home</a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown ">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Cybron</a>
           <ul class="dropdown-menu mx-auto">
             <li>
-              <a class="dropdown-item nav-link" href="#">Action</a>
+              <a class="dropdown-item nav-link" href="about.html">About Cybron</a>
             </li>
             <li>
-              <a class="dropdown-item nav-link" href="#">Another action</a>
+              <a class="dropdown-item nav-link" href="why.html">Why Chose US</a>
             </li>
             <li>
-              <a class="dropdown-item nav-link" href="#">Something else here</a>
+              <a class="dropdown-item nav-link" href="evolution.html">Evolution of Cybron</a>
+            </li>
+            <li>
+              <a class="dropdown-item nav-link" href="framework.html">Framework of Cybron</a>
+            </li> <li>
+              <a class="dropdown-item nav-link" href="certifications.html">Certfication</a>
+            </li> <li>
+              <a class="dropdown-item nav-link" href="assessment.html">Assessment and Methodology</a>
+            </li> <li>
+              <a class="dropdown-item nav-link" href="careers.html">Careers & Opportunities</a>
             </li>
           </ul>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Memberships</a>
+        
           <ul class="dropdown-menu mx-auto">
             <li>
-              <a class="dropdown-item nav-link" href="#">Action</a>
+              <a class="dropdown-item nav-link" href="memberships/ScoutMemberships.html">Cybron Scout Memberships</a>
             </li>
             <li>
-              <a class="dropdown-item nav-link" href="#">Another action</a>
+              <a class="dropdown-item nav-link" href="memberships/AssociateMemberships.html">Cybron Associate Memberships</a>
             </li>
             <li>
-              <a class="dropdown-item nav-link" href="#">Something else here</a>
+              <a class="dropdown-item nav-link" href="memberships/ProfessionalMemberships.html"> Cybron Professional Memberships</a>
             </li>
           </ul>
         </li>
+        <!--  -->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Get Started Certifications</a>
-          <ul class="dropdown-menu mx-auto">
-            <li>
-              <a class="dropdown-item nav-link" href="#">Action</a>
-            </li>
-            <li>
-              <a class="dropdown-item nav-link" href="#">Another action</a>
-            </li>
-            <li>
-              <a class="dropdown-item nav-link" href="#">Something else here</a>
-            </li>
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Get Started Certifications
+          </a>
+          <ul class="dropdown-menu dropdown-large py-3  p-3 mx-auto">
+            <div class="container d-flex flex-row ">
+              <!-- Cybron Scout Certifications -->
+              <div class="col-lg-3 col-md-6">
+                <h6 class="dropdown-header">CYBRON SCOUT CERTIFICATIONS</h6>
+                <a class="dropdown-item" href="#">Cybron Scout Grade 6 Certification</a>
+                <a class="dropdown-item" href="#">Cybron Scout Grade 7 Certification</a>
+                <a class="dropdown-item" href="#">Cybron Scout Grade 8 Certification</a>
+                <a class="dropdown-item" href="#">Cybron Scout Grade 9 Certification</a>
+                <a class="dropdown-item" href="#">Cybron Scout Grade 10 Certification</a>
+                <a class="dropdown-item" href="#">Cybron Diploma</a>
+              </div>
+              <!-- Cybron Associate Certifications -->
+              <div class="col-lg-3 col-md-6">
+                <h6 class="dropdown-header">CYBRON ASSOCIATE CERTIFICATIONS</h6>
+                <a class="dropdown-item" href="#">Cybron Fundamentals</a>
+                <a class="dropdown-item" href="#">Cybron +</a>
+                <a class="dropdown-item" href="#">True Blue Hacking</a>
+                <a class="dropdown-item" href="#">True Blue Hacking +</a>
+              </div>
+              <!-- Cybron Security Professional -->
+              <div class="col-lg-3 col-md-6">
+                <h6 class="dropdown-header">CYBRON SECURITY PROFESSIONAL</h6>
+                <a class="dropdown-item" href="#">Cybron Offensive Security</a>
+                <a class="dropdown-item" href="#">Cybron Infrastructure Security</a>
+                <a class="dropdown-item" href="#">Cybron Network Security</a>
+                <a class="dropdown-item" href="#">Cybron Application Security</a>
+                <a class="dropdown-item" href="#">Cybron Security Architecture</a>
+                <a class="dropdown-item" href="#">Cybron Security Engineering</a>
+                <a class="dropdown-item" href="#">Cybron Security Management</a>
+              </div>
+              <!-- Cybron Network -->
+              <div class="col-lg-3 col-md-6">
+                <h6 class="dropdown-header">CYBRON NETWORK</h6>
+                <a class="dropdown-item" href="#">Cybron Partners</a>
+                <a class="dropdown-item" href="#">Become a Partner</a>
+                <a class="dropdown-item" href="#">Cybron Trainers</a>
+                <a class="dropdown-item" href="#">Become a Trainer</a>
+              </div>
+            </div>
           </ul>
         </li>
+        
+        <!--  -->
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Blog</a>
+          <a class="nav-link" aria-current="page" href="blog.html">Blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Contact Us</a>
+          <a class="nav-link" aria-current="page" href="contact.html">Contact Us</a>
         </li>
       </ul>
     </div>
