--- a/cybron/about.html
+++ b/cybron/about.html
@@ -139,13 +139,13 @@
             
               <ul class="dropdown-menu mx-auto">
                 <li>
-                  <a class="dropdown-item nav-link" href="memberships/ScoutMemberships.html">Cybron Scout Memberships</a>
+                  <a class="dropdown-item nav-link" href="/memberships/ScoutMemberships.html">Cybron Scout Memberships</a>
                 </li>
                 <li>
-                  <a class="dropdown-item nav-link" href="memberships/AssociateMemberships.html">Cybron Associate Memberships</a>
+                  <a class="dropdown-item nav-link" href="/memberships/AssociateMemberships.html">Cybron Associate Memberships</a>
                 </li>
                 <li>
-                  <a class="dropdown-item nav-link" href="memberships/ProfessionalMemberships.html"> Cybron Professional Memberships</a>
+                  <a class="dropdown-item nav-link" href="/memberships/ProfessionalMemberships.html"> Cybron Professional Memberships</a>
                 </li>
               </ul>
             </li>
@@ -258,13 +258,13 @@
         
           <ul class="dropdown-menu mx-auto">
             <li>
-              <a class="dropdown-item nav-link" href="memberships/ScoutMemberships.html">Cybron Scout Memberships</a>
+              <a class="dropdown-item nav-link" href="/memberships/ScoutMemberships.html">Cybron Scout Memberships</a>
             </li>
             <li>
-              <a class="dropdown-item nav-link" href="memberships/AssociateMemberships.html">Cybron Associate Memberships</a>
+              <a class="dropdown-item nav-link" href="/memberships/AssociateMemberships.html">Cybron Associate Memberships</a>
             </li>
             <li>
-              <a class="dropdown-item nav-link" href="memberships/ProfessionalMemberships.html"> Cybron Professional Memberships</a>
+              <a class="dropdown-item nav-link" href="/memberships/ProfessionalMemberships.html"> Cybron Professional Memberships</a>
             </li>
           </ul>
         </li>
@@ -273,8 +273,8 @@
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Get Started Certifications
           </a>
-          <ul class="dropdown-menu dropdown-large py-3  p-3 mx-auto">
-            <div class="container d-flex flex-row ">
+          <ul class="dropdown-menu  py-3  p-3 mx-auto">
+            <div class="container d-flex flex-lg-row flex-column ">
               <!-- Cybron Scout Certifications -->
               <div class="col-lg-3 col-md-6">
                 <h6 class="dropdown-header">CYBRON SCOUT CERTIFICATIONS</h6>
