--- a/cybron/about.html
+++ b/cybron/about.html
@@ -159,12 +159,12 @@
                   <!-- Cybron Scout Certifications -->
                   <div class="col-lg-3 col-md-6">
                     <h6 class="dropdown-header">CYBRON SCOUT CERTIFICATIONS</h6>
-                    <a class="dropdown-item" href="#">Cybron Scout Grade 6 Certification</a>
-                    <a class="dropdown-item" href="#">Cybron Scout Grade 7 Certification</a>
-                    <a class="dropdown-item" href="#">Cybron Scout Grade 8 Certification</a>
-                    <a class="dropdown-item" href="#">Cybron Scout Grade 9 Certification</a>
-                    <a class="dropdown-item" href="#">Cybron Scout Grade 10 Certification</a>
-                    <a class="dropdown-item" href="#">Cybron Diploma</a>
+                    <a class="dropdown-item" href="/Get-Started/6thgrade.html">Cybron Scout Grade 6 Certification</a>
+                    <a class="dropdown-item" href="/Get-Started/7thgrade.html">Cybron Scout Grade 7 Certification</a>
+                    <a class="dropdown-item" href="/Get-Started/6thgrade.html">Cybron Scout Grade 8 Certification</a>
+                    <a class="dropdown-item" href="/Get-Started/6thgrade.html">Cybron Scout Grade 9 Certification</a>
+                    <a class="dropdown-item" href="/Get-Started/6thgrade.html">Cybron Scout Grade 10 Certification</a>
+                    <a class="dropdown-item" href="/Get-Started/6thgrade.html">Cybron Diploma</a>
                   </div>
                   <!-- Cybron Associate Certifications -->
                   <div class="col-lg-3 col-md-6">
