--- a/Get-Started/diploma.html
+++ b/Get-Started/diploma.html
@@ -301,10 +301,10 @@ background-size: cover;
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Get Started Certifications
           </a>
-          <ul class="dropdown-menu  py-3  p-3 mx-auto">
-            <div class="container d-flex flex-lg-row flex-column ">
+          <ul class="dropdown-menu  py-3  ">
+            <div class="container d-flex flex-lg-row flex-column">
                <!-- Cybron Scout Certifications -->
-               <div class="col-lg-3 col-md-6">
+               <div class="col-lg-3 col-md-6 col-12">
                 <h6 class="dropdown-header">CYBRON SCOUT CERTIFICATIONS</h6>
                 <a class="dropdown-item" href="6thgrade.html">Cybron Scout Grade 6 Certification</a>
                 <a class="dropdown-item" href="7thgrade.html">Cybron Scout Grade 7 Certification</a>
@@ -500,10 +500,10 @@ On this Subscription, you will get One Year access of all material, literature t
   <div class="col-9 mx-auto d-flex flex-column align-items-start justify-content-center   px-4">
     <h2 class="text-center mb-3 mt-5 text-white">Form</h2>
   <p class="locte text-white text-center">Fill the form and get the outline and other material</p>
-    <form class="mt-3">
+    <form class="mt-3 ">
       <div class="row g-3">
-        <div class="col-md-6">
-            <input type="text" class="form-control form-control1" id="firstName" placeholder="First Name" required>
+        <div class="col-md-6 col-12">
+            <input type="text" class="form-control form-control1 col-12" id="firstName" placeholder="First Name" required>
         </div>
         <div class="col-md-6">
           <input type="email" class="form-control form-control1" id="lastName" placeholder="Email" required>
