Updated code with new changes

--- a/index.html
+++ b/index.html
@@ -486,10 +486,9 @@
 </button>
 
     </div>
-    <div class="col-lg-6 col-md-6  d-flex flex-lg-row flex-column io mt-lg-0 mt-4">
-<img src="assets/appro (1).jpg" class="img-fluid col-lg-10 col-12 io1" alt="">
-
-<img src="assets/appro (2).png" class="img-fluid col-lg-6  col-6 ms-lg-0 ms-3  io2" alt="">
+    <div class="col-lg-6 col-md-6 col-12 position-relative d-flex flex-lg-row flex-column io mt-lg-0 mt-4">
+<img src="assets/appro (1).jpg" class="img-fluid col-lg-10 ms-auto col-12 io1 ps-lg-2" alt="">
+<img src="assets/appro (2).png" class="img-fluid col-lg-6 ms-auto col-6  io2 ps-lg-2" alt="">
 
     </div>
 
@@ -633,12 +632,12 @@ DISCOVER NOW
 <!-- SUCESS SECTION END -->
 <!-- TESTIMONIAL -->
  <div class="container-fluid my-5 d-flex flex-lg-row flex-column justify-content-center align-items-center testimoina">
-<div class="col-lg-6 col-12 test-bg  -md-none  flex-lg-row flex-column justify-content-between">
+<div class="col-lg-6 col-12 test-bg  py-5  flex-lg-row flex-column justify-content-between">
   <img src="assets/test (1).jpg" class=" testi1 col-lg-4 col-12" alt="">
-  <img src="assets/test (2).jpg" class=" testi2 col-lg-4 col-12" alt="">
+  <img src="assets/test (2).jpg" class=" testi2 col-lg-5 col-12" alt="">
 
 </div>
-<div class="col-lg-6 col-12 ps-lg-5  d-flex  flex-column justify-content-center align-items-start">
+<div class="col-lg-6 col-12 ps-lg-5 py-5 d-flex  flex-column justify-content-center align-items-start">
   <span class="mb-4 col-lg-6 col-12 text-start col-org text-uppercase ">WHAT CLIENTS SAY</span>
 <h2 class="fs-1 mb-3">Hear What Our Global Clients Say</h2>
 <div class="col-12">
