--- a/index.html
+++ b/index.html
@@ -633,8 +633,8 @@ DISCOVER NOW
 <!-- TESTIMONIAL -->
  <div class="container-fluid my-5 d-flex flex-lg-row flex-column justify-content-center align-items-center testimoina">
 <div class="col-lg-6 col-12 test-bg  py-5  flex-lg-row flex-column justify-content-between">
-  <img src="assets/test (1).jpg" class=" testi1 col-lg-4 col-12" alt="">
-  <img src="assets/test (2).jpg" class=" testi2 col-lg-5 col-12" alt="">
+  <img src="assets/test (1).jpg" class=" testi1 col-lg-4 col-10 mx-auto mt-lg-0 mt-5" alt="">
+  <img src="assets/test (2).jpg" class=" testi2 col-lg-5 col-10" alt="">
 
 </div>
 <div class="col-lg-6 col-12 ps-lg-5 py-5 d-flex  flex-column justify-content-center align-items-start">
@@ -701,6 +701,22 @@ DISCOVER NOW
 </div>
  <!-- TESTIMONIAL -->
 
+
+ <!-- FAQS -->
+  <div class="container-fluid col-12  d-flex px-4 mt-5 pt-5 flex-lg-row flex-column justify-content-center align-items-center">
+    <div class="col-lg-6 col-12 px-lg-2 ">
+      <p class="org col-lg-4 col-12 mx-lg-0 mx-auto px-3 py-1 rounded-4">Get Some Question</p>
+      <h1> Together, we can elevate your team and business to their fullest potential.</h1>
+      <div class="accordion my-5 m-0 p-0 " id="accordionPanelsStayOpenExample">
+        <div class="accordion-item m-0 p-0">
+        <h2 class="accordion-header">
+          
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">What is the typical duration of a consulting engagement?</button>
+      </h2><div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse"><div class="accordion-body"><span class="col-grey">The consultancy industry is constantly evolving, new trends, technologies, and methodologies emerging regularly. Staying ahead of these changes is crucial for a consultancy firms success.</span></div></div></div>
+      <div class="accordion-item"><h2 class="accordion-header"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">What types of businesses do you work with?</button></h2><div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"><div class="accordion-body"><span class="col-grey">The consultancy industry is constantly evolving, new trends, technologies, and methodologies emerging regularly. Staying ahead of these changes is crucial for a consultancy firm’s success.</span></div></div></div>
+      <div class="accordion-item"><h2 class="accordion-header"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">How working process is simplified?</button></h2><div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"><div class="accordion-body"><span class="col-grey">The consultancy industry is constantly evolving, new trends, technologies, and methodologies emerging regularly. Staying ahead of these changes is crucial for a consultancy firm’s success.</span></div></div></div></div></div>
+  <div class="col-lg-6 col-12"><img src="assets/faqs-x8Ac__aX.webp" class="img-fluid col-12" alt="" srcset=""></div></div>
+  <!-- FAQS -->
  <!-- CONTACT-US -->
 
 
