Updated code with new changes

--- a/index.html
+++ b/index.html
@@ -340,10 +340,12 @@
             mechanism & prospects to learn <span class="text-col">cyber security</span>
           </h2>
       
-          <button class="mt-3 btn3 col-lg-4 col-6 p-2 d-flex flex-row align-items-center justify-content-center">
+          <button class="mt-3 btn3 col-lg-4 p-2 d-flex flex-row align-items-center justify-content-center">
             Inception Of Cybron
-            <i class="fa-solid fa-arrow-right icon-hover"></i>
-          </button>
+ <i class="fa-solid fa-paper-plane icon-hover"></i>
+  <!-- <i class="fa-solid fa-arrow-right icon-hover"></i> -->
+</button>
+      
         </div>
       </div>
     </div>
