--- a/cybron/certifications.html
+++ b/cybron/certifications.html
@@ -459,15 +459,14 @@ Home / Certifications & Recognitions </h5>
 
 
  <!-- FOOTER -->
-<footer>
-  <footer class="bg-light py-5">
+  <footer class=" pt-5">
     <div class="container-fluid px-4">
       <div class="row">
         <!-- Company Info -->
         <div class="col-lg-3 col-md-6 mb-4">
-          <img src="/assets/logo.png" alt="Cybron Logo" class="mb-3 col-3 m-0 p-0">
-          <p>404 Old Bedford Road, Luton, England LU2 7BP<br>SIC codes — 62012 United Kingdom</p>
-          <p><a href="mailto:cybron@cybroninternational.com" class="text-dark">cybron@cybroninternational.com</a></p>
+          <img src="/assets/footerlogo.png" alt="Cybron Logo" class="mb-3 col-lg-10 m-0 p-0">
+          <p class="locte text-white">404 Old Bedford Road, Luton, England LU2 7BP<br>SIC codes — 62012 United Kingdom</p>
+          <p><a href="mailto:cybron@cybroninternational.com" class="text-white">cybron@cybroninternational.com</a></p>
         </div>
   
         <!-- Cybron Services -->
@@ -512,19 +511,18 @@ Home / Certifications & Recognitions </h5>
       </div>
   
       <!-- Footer Bottom -->
-      <div class="text-center mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-between">
-        <p class="mb-0">© 2024 Cybron International. All Rights Reserved</p>
-        <div class="d-flex justify-content-center mt-2">
-          <a href="#" class="text-dark mx-2"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="text-dark mx-2"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="text-dark mx-2"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="text-dark mx-2"><i class="fab fa-linkedin"></i></a>
+      <div class="text-center mt-4 d-flex  flex-column justify-content-center justify-content-lg-between">
+        <div class="d-flex justify-content-center pb-3 mt-2">
+          <a href="#" class="text-white mx-2"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="text-white mx-2"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="text-white mx-2"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
     </div>
+    <p class="mb-0 mx-auto bg-col text-white container-fluid p-3 text-center">© 2024 Cybron International. All Rights Reserved</p>
   </footer>
   
-</footer>
  <!-- FOOTER -->
 
  <!-- Option 1: Bootstrap Bundle with Popper -->
