--- a/cybron/about.html
+++ b/cybron/about.html
@@ -137,37 +137,38 @@
                     <h6 class="dropdown-header">CYBRON SCOUT CERTIFICATIONS</h6>
                     <a class="dropdown-item" href="/Get-Started/6thgrade.html">Cybron Scout Grade 6 Certification</a>
                     <a class="dropdown-item" href="/Get-Started/7thgrade.html">Cybron Scout Grade 7 Certification</a>
-                    <a class="dropdown-item" href="/Get-Started/6thgrade.html">Cybron Scout Grade 8 Certification</a>
-                    <a class="dropdown-item" href="/Get-Started/6thgrade.html">Cybron Scout Grade 9 Certification</a>
-                    <a class="dropdown-item" href="/Get-Started/6thgrade.html">Cybron Scout Grade 10 Certification</a>
-                    <a class="dropdown-item" href="/Get-Started/6thgrade.html">Cybron Diploma</a>
+                    <a class="dropdown-item" href="/Get-Started/8thgrade.html">Cybron Scout Grade 8 Certification</a>
+                    <a class="dropdown-item" href="/Get-Started/9thgrade.html">Cybron Scout Grade 9 Certification</a>
+                    <a class="dropdown-item" href="/Get-Started/10thgrade.html">Cybron Scout Grade 10 Certification</a>
+                    <a class="dropdown-item" href="/Get-Started/diploma.html">Cybron Diploma</a>
                   </div>
                   <!-- Cybron Associate Certifications -->
                   <div class="col-lg-3 col-md-6">
-                    <h6 class="dropdown-header">CYBRON ASSOCIATE CERTIFICATIONS</h6>
-                    <a class="dropdown-item" href="#">Cybron Fundamentals</a>
-                    <a class="dropdown-item" href="#">Cybron +</a>
-                    <a class="dropdown-item" href="#">True Blue Hacking</a>
-                    <a class="dropdown-item" href="#">True Blue Hacking +</a>
+                
+            <h6 class="dropdown-header">CYBRON ASSOCIATE CERTIFICATIONS</h6>
+            <a class="dropdown-item nav-link" href="/associate/fundamentals.html">Cybron Fundamentals</a>
+            <a class="dropdown-item nav-link" href="/associate/cybron.html">Cybron +</a>
+            <a class="dropdown-item nav-link" href="/associate/bluehacking.html">True Blue Hacking</a>
+            <a class="dropdown-item nav-link" href="/associate/bluehacking+.html">True Blue Hacking +</a>
                   </div>
                   <!-- Cybron Security Professional -->
                   <div class="col-lg-3 col-md-6">
                     <h6 class="dropdown-header">CYBRON SECURITY PROFESSIONAL</h6>
-                    <a class="dropdown-item" href="#">Cybron Offensive Security</a>
-                    <a class="dropdown-item" href="#">Cybron Infrastructure Security</a>
-                    <a class="dropdown-item" href="#">Cybron Network Security</a>
-                    <a class="dropdown-item" href="#">Cybron Application Security</a>
-                    <a class="dropdown-item" href="#">Cybron Security Architecture</a>
-                    <a class="dropdown-item" href="#">Cybron Security Engineering</a>
-                    <a class="dropdown-item" href="#">Cybron Security Management</a>
+                    <a class="dropdown-item nav-link" href="/security/offensive.html">Cybron Offensive Security</a>
+                    <a class="dropdown-item nav-link" href="/security/Infrastructure.html">Cybron Infrastructure Security</a>
+                    <a class="dropdown-item nav-link" href="/security/Network.html">Cybron Network Security</a>
+                    <a class="dropdown-item nav-link" href="/security/Application.html">Cybron Application Security</a>
+                    <a class="dropdown-item nav-link" href="/security/Architecture.html">Cybron Security Architecture</a>
+                    <a class="dropdown-item nav-link" href="/security/Engineering.html">Cybron Security Engineering</a>
+                    <a class="dropdown-item nav-link" href="/security/Management.html">Cybron Security Management</a>
                   </div>
                   <!-- Cybron Network -->
                   <div class="col-lg-3 col-md-6">
                     <h6 class="dropdown-header">CYBRON NETWORK</h6>
-                    <a class="dropdown-item" href="#">Cybron Partners</a>
-                    <a class="dropdown-item" href="#">Become a Partner</a>
-                    <a class="dropdown-item" href="#">Cybron Trainers</a>
-                    <a class="dropdown-item" href="#">Become a Trainer</a>
+                    <a class="dropdown-item nav-link" href="/network/Partners.html">Cybron Partners</a>
+                    <a class="dropdown-item nav-link" href="/network/BecomePartner.html">Become a Partner</a>
+                    <a class="dropdown-item nav-link" href="/network/Trainers.html">Cybron Trainers</a>
+                    <a class="dropdown-item nav-link" href="/network/BecomeTrainer.html">Become a Trainer</a>
                   </div>
                 </div>
               </ul>
@@ -269,19 +270,19 @@
             <a class="dropdown-item nav-link" href="/associate/bluehacking+.html">True Blue Hacking +</a>
 
             <h6 class="dropdown-header">CYBRON SECURITY PROFESSIONAL</h6>
-            <a class="dropdown-item nav-link" href="security/offensive.html">Cybron Offensive Security</a>
-            <a class="dropdown-item nav-link" href="security/Infrastructure.html">Cybron Infrastructure Security</a>
-            <a class="dropdown-item nav-link" href="security/Network.html">Cybron Network Security</a>
-            <a class="dropdown-item nav-link" href="security/Application.html">Cybron Application Security</a>
-            <a class="dropdown-item nav-link" href="security/Architecture.html">Cybron Security Architecture</a>
-            <a class="dropdown-item nav-link" href="security/Engineering.html">Cybron Security Engineering</a>
-            <a class="dropdown-item nav-link" href="security/Management.html">Cybron Security Management</a>
+            <a class="dropdown-item nav-link" href="/security/offensive.html">Cybron Offensive Security</a>
+            <a class="dropdown-item nav-link" href="/security/Infrastructure.html">Cybron Infrastructure Security</a>
+            <a class="dropdown-item nav-link" href="/security/Network.html">Cybron Network Security</a>
+            <a class="dropdown-item nav-link" href="/security/Application.html">Cybron Application Security</a>
+            <a class="dropdown-item nav-link" href="/security/Architecture.html">Cybron Security Architecture</a>
+            <a class="dropdown-item nav-link" href="/security/Engineering.html">Cybron Security Engineering</a>
+            <a class="dropdown-item nav-link" href="/security/Management.html">Cybron Security Management</a>
 
             <h6 class="dropdown-header">CYBRON NETWORK</h6>
-            <a class="dropdown-item nav-link" href="network/Partners.html">Cybron Partners</a>
-            <a class="dropdown-item nav-link" href="network/BecomePartner.html">Become a Partner</a>
-            <a class="dropdown-item nav-link" href="network/Trainers.html">Cybron Trainers</a>
-            <a class="dropdown-item nav-link" href="network/BecomeTrainer.html">Become a Trainer</a>
+            <a class="dropdown-item nav-link" href="/network/Partners.html">Cybron Partners</a>
+            <a class="dropdown-item nav-link" href="/network/BecomePartner.html">Become a Partner</a>
+            <a class="dropdown-item nav-link" href="/network/Trainers.html">Cybron Trainers</a>
+            <a class="dropdown-item nav-link" href="/network/BecomeTrainer.html">Become a Trainer</a>
  
       
       </ul>
