Updated code with new changes

--- a/Get-Started/6thgrade.html
+++ b/Get-Started/6thgrade.html
@@ -10,7 +10,7 @@
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <!-- EXTERNEL CSS FILE -->
 
     <!-- Bootstrap CSS -->
@@ -400,6 +400,15 @@ Home / Cybron Scout Grade 6 Certification</h5>
   
       </div>
     <!-- EXPERICNE SECTION END -->
+<!-- LEFT COL START-->
+<div class="container-fluid">
+  <div class="col-9">
+    
+  </div>
+  <div class="col-3"></div>
+
+</div>
+<!-- LEFT COL START-->
 
 <!-- FRAMEWORK -->
 <div class="container-fluid d-flex flex-lg-row flex-column my-5 py-5">
@@ -590,7 +599,7 @@ On this Subscription, you will get One Year access of all material, literature t
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
     <!-- EXTERNEL JS FILE -->
-    <script src="/app.js"></script>
+        <script src="/JS/app.js"></script>
     <!-- EXTERNEL JS FILE -->
 
 </body>
