--- a/Get-Started/9thgrade.html
+++ b/Get-Started/9thgrade.html
@@ -10,7 +10,7 @@
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <!-- EXTERNEL CSS FILE -->
 
     <!-- Bootstrap CSS -->
@@ -590,7 +590,7 @@ On this Subscription, you will get One Year access of all material, literature t
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
     <!-- EXTERNEL JS FILE -->
-    <script src="/app.js"></script>
+        <script src="/JS/app.js"></script>
     <!-- EXTERNEL JS FILE -->
 
 </body>
