--- a/cybron/certifications.html
+++ b/cybron/certifications.html
@@ -10,7 +10,7 @@
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <!-- EXTERNEL CSS FILE -->
 
     <!-- Bootstrap CSS -->
@@ -529,7 +529,7 @@ Home / Certifications & Recognitions </h5>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
     <!-- EXTERNEL JS FILE -->
-    <script src="/app.js"></script>
+        <script src="/JS/app.js"></script>
     <!-- EXTERNEL JS FILE -->
 
 </body>
