Updated code with new changes

--- a/Get-Started/6thgrade.html
+++ b/Get-Started/6thgrade.html
@@ -23,6 +23,11 @@
 
  <title>Cybron Scout Grade 6 Certification – Cybron Security</title>
  <style>
+  .color-2{
+    text-align:start !important;
+    font-size: 15px;
+  color:#8f8f8f !important;
+}
     .aboutback{
       background-color: #6095FF;
         /* background-image: url("/assets/why.png"); */
@@ -402,8 +407,73 @@ Home / Cybron Scout Grade 6 Certification</h5>
     <!-- EXPERICNE SECTION END -->
 <!-- LEFT COL START-->
 <div class="container-fluid">
-  <div class="col-9">
-    
+  <div class="col-lg-8">
+    <div class="col-12">
+    <div class="d-flex flex-row align-items-center">
+    <i class="fas fa-hand-point-right me-2 fs-4 text-white p-2 rounded-circle bg-col"></i>
+     <h4>Why to became cybron scouts</h4>
+    </div>
+     <p class="color-2 pt-3">
+  As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
+</p>
+</div>
+<div class="col-12">
+  <div class="d-flex flex-row align-items-center">
+  <i class="fas fa-hand-point-right me-2 fs-4 text-white p-2 rounded-circle bg-col"></i>
+   <h4>Benefits of program and prerequisites </h4>
+  </div>
+   <p class="color-2 pt-3">
+As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
+</p>
+</div>    <div class="col-12">
+  <div class="d-flex flex-row align-items-center">
+  <i class="fas fa-hand-point-right me-2 fs-4 text-white p-2 rounded-circle bg-col"></i>
+   <h4>Cybron framework and description </h4>
+  </div>
+   <p class="color-2 pt-3">
+As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
+</p>
+</div>    <div class="col-12">
+  <div class="d-flex flex-row align-items-center">
+  <i class="fas fa-hand-point-right me-2 fs-4 text-white p-2 rounded-circle bg-col"></i>
+   <h4>Program Structure </h4>
+  </div>
+   <p class="color-2 pt-3">
+As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
+</p>
+</div>    <div class="col-12">
+  <div class="d-flex flex-row align-items-center">
+  <i class="fas fa-hand-point-right me-2 fs-4 text-white p-2 rounded-circle bg-col"></i>
+   <h4>Domain and task knowledge areas </h4>
+  </div>
+   <p class="color-2 pt-3">
+As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
+</p>
+</div>    <div class="col-12">
+  <div class="d-flex flex-row align-items-center">
+  <i class="fas fa-hand-point-right me-2 fs-4 text-white p-2 rounded-circle bg-col"></i>
+   <h4>Assessment and program</h4>
+  </div>
+   <p class="color-2 pt-3">
+As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
+</p>
+</div>    <div class="col-12">
+  <div class="d-flex flex-row align-items-center">
+  <i class="fas fa-hand-point-right me-2 fs-4 text-white p-2 rounded-circle bg-col"></i>
+   <h4>Reg and payment process and fee of the program </h4>
+  </div>
+   <p class="color-2 pt-3">
+As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
+</p>
+</div>    <div class="col-12">
+  <div class="d-flex flex-row align-items-center">
+  <i class="fas fa-hand-point-right me-2 fs-4 text-white p-2 rounded-circle bg-col"></i>
+   <h4>Continuing educational requirements</h4>
+  </div>
+   <p class="color-2 pt-3">
+As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
+</p>
+</div>
   </div>
   <div class="col-3"></div>
 
