Updated code with new changes

--- a/Get-Started/6thgrade.html
+++ b/Get-Started/6thgrade.html
@@ -516,6 +516,12 @@ As a technology is being used in our daily life and almost every individual and 
 </div>
   </div>
   <div class="col-lg-4 col-md-6  col-12 ">
+    <div class="mb-3 col-12 px-3 d-lg-flex  d-none flex-row justify-content-center align-items-center  py-5 color-2 border border-2 shadow-lg rounded-3 frameworkpic">
+      <i class="fa-solid fa-eye diveye text-white">
+        
+      </i>
+  
+  </div>
   <div class="mb-3 col-12 px-3  py-5 color-2 shadow-lg border border-2 rounded-3">
     <h4 class="text-center pb-4 text-dark">Additional Information</h4>
     <p>Training Days : <span class="fw-normal text-dark">2</span></p>
@@ -616,17 +622,12 @@ As a technology is being used in our daily life and almost every individual and 
     </div>
   </div>  
  
-  <div class="mb-3 col-12 px-3 d-flex flex-row justify-content-center align-items-center  py-5 color-2 border border-2 shadow-lg rounded-3 frameworkpic">
-    <i class="fa-solid fa-eye diveye text-white">
-      
-    </i>
-
-</div>
+ 
 <!--  -->
   </div>
 </div>
 
-</div>
+
 <!-- LEFT COL START-->
 
 <!-- FRAMEWORK -->
