Updated code with new changes

--- a/6thgrade.html
+++ b/6thgrade.html
@@ -6,11 +6,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- FONT AWEOSEOM -->
-<link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
+<link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
-    <link rel="stylesheet" href="/CSS/style.css">
+
+ <link rel="stylesheet" href="CSS/style.css">
     <!-- EXTERNEL CSS FILE -->
 
     <!-- Bootstrap CSS -->
@@ -30,7 +31,7 @@
 }
     .aboutback{
       background-color: #6095FF;
-        /* background-image: url("/assets/why.png"); */
+        /* background-image: url("assets/why.png"); */
         transform: scale(0.99.9) !important;
   transition: 6.9s ease-in-out !important;
   background-position: center !important;
@@ -67,7 +68,7 @@
     }.whycol-11{
   height: 100vh;
   background-position: center;
-  background-image: url("/assets/evulation_4.png");
+  background-image: url("assets/evulation_4.png");
 object-fit: cover;
 background-size: cover;
 }
@@ -765,7 +766,7 @@ On this Subscription, you will get One Year access of all material, literature t
       <div class="row">
 
         <div class="col-lg-3 col-md-6 mb-4">
-          <img src="/assets/footerlogo.png" alt="Cybron Logo" class="mb-3 mx-lg-0 mx-auto col-12 img-fluid">
+          <img src="assets/footerlogo.png" alt="Cybron Logo" class="mb-3 mx-lg-0 mx-auto col-12 img-fluid">
           <p class="locte text-white">404 Old Bedford Road, Luton, England LU2 7BP<br>SIC codes — 62012 United Kingdom</p>
           <p><a href="mailto:cybron@cybroninternational.com" class="text-white">cybron@cybroninternational.com</a></p>
         </div>
@@ -826,7 +827,7 @@ On this Subscription, you will get One Year access of all material, literature t
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
     <!-- EXTERNEL JS FILE -->
-        <script src="/JS/app.js"></script>
+     <script src="JS/app.js"></script>
     <!-- EXTERNEL JS FILE -->
 
 </span></body>
