--- a/Architecture.html
+++ b/Architecture.html
@@ -62,7 +62,7 @@
     }.whycol-11{
   height: 100vh;
   background-position: center;
-  background-image: url(/assets/evulation.png);
+  background-image: url(assets/evulation.png);
 object-fit: cover;
 background-size: cover;
 }
@@ -977,7 +977,7 @@ Register & Get Content
       <div class="row">
         <!-- Company Info -->
         <div class="col-lg-3 col-md-6 mb-4">
-          <img src="security/assets/logo.png" alt="Cybron Logo" class="mb-3 col-3 m-0 p-0">
+          <img src="securityassets/logo.png" alt="Cybron Logo" class="mb-3 col-3 m-0 p-0">
           <p>404 Old Bedford Road, Luton, England LU2 7BP<br>SIC codes — 62012 United Kingdom</p>
           <p><a href="mailto:cybron@cybroninternational.com" class="text-dark">cybron@cybroninternational.com</a></p>
         </div>
