--- a/evolution.html
+++ b/evolution.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- FONT AWEOSEOM -->
-<link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
+<link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
-    <link rel="stylesheet" href="/CSS/style.css">
+<link rel="stylesheet" href="CSS/style.css">
     <!-- EXTERNEL CSS FILE -->
 
     <!-- Bootstrap CSS -->
@@ -24,7 +24,7 @@
  <title>Evolution of Cybron – Cybron Security</title>
  <style>
     .aboutback{
-        background-image: url("/assets/evulation_4.png");
+        background-image: url("assets/evulation_4.png");
         transform: scale(0.99.9) !important;
   transition: 6.9s ease-in-out !important;
   background-position: center !important;
@@ -361,8 +361,8 @@ Home / Evolution of Cybron</h5>
       
           <!-- Left Section -->
           <div class="col-md-6 col-lg-6 evcol text-center text-md-start d-flex flex-lg-row">
-        <img src="/assets/about2-img-1.jpg" class="img-fluid ev-col-1 ev-c-1" alt="">
-        <img src="/assets/about2-img-2.jpg" class="img-fluid ev-col-1 ev-c-2" alt="">   
+        <img src="assets/about2-img-1.jpg" class="img-fluid ev-col-1 ev-c-1" alt="">
+        <img src="assets/about2-img-2.jpg" class="img-fluid ev-col-1 ev-c-2" alt="">   
        
 
         </div>
@@ -415,7 +415,7 @@ Home / Evolution of Cybron</h5>
           </div>
         </div>
         <div class="col-lg-6 col-12">
-          <img src="/assets/uss_2.jpg" class="img-fluid col-12" alt="1997">
+          <img src="assets/uss_2.jpg" class="img-fluid col-12" alt="1997">
         </div>
       </div>
 
@@ -431,7 +431,7 @@ Home / Evolution of Cybron</h5>
           </div>
         </div>
         <div class="col-lg-6 col-12 order-lg-1 pe-lg-5">
-            <img src="/assets/evol-1.jpg" class="img-fluid col-12" alt="1997">
+            <img src="assets/evol-1.jpg" class="img-fluid col-12" alt="1997">
         </div>
       </div>
 
@@ -448,7 +448,7 @@ Home / Evolution of Cybron</h5>
           </div>
         </div>
         <div class="col-lg-6 col-12">
-            <img src="/assets/cir_4.jpg" class="img-fluid col-12" alt="1997">
+            <img src="assets/cir_4.jpg" class="img-fluid col-12" alt="1997">
         </div>
       </div>
     </div>
@@ -463,7 +463,7 @@ Home / Evolution of Cybron</h5>
       <div class="row">
         <!-- Company Info -->
         <div class="col-lg-3 col-md-6 mb-4">
-          <img src="/assets/footerlogo.png" alt="Cybron Logo" class="mb-3 col-lg-10 m-0 p-0">
+          <img src="assets/footerlogo.png" alt="Cybron Logo" class="mb-3 col-lg-10 m-0 p-0">
           <p class="locte text-white">404 Old Bedford Road, Luton, England LU2 7BP<br>SIC codes — 62012 United Kingdom</p>
           <p><a href="mailto:cybron@cybroninternational.com" class="text-white">cybron@cybroninternational.com</a></p>
         </div>
@@ -532,7 +532,7 @@ Home / Evolution of Cybron</h5>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
     <!-- EXTERNEL JS FILE -->
-        <script src="/JS/app.js"></script>
+     <script src="JS/app.js"></script>
     <!-- EXTERNEL JS FILE -->
 
 </body>
