--- a/AssociateMemberships.html
+++ b/AssociateMemberships.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- FONT AWEOSEOM -->
-<link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
+<link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
-    <link rel="stylesheet" href="/CSS/style.css">
+<link rel="stylesheet" href="CSS/style.css">
     <!-- EXTERNEL CSS FILE -->
 
     <!-- Bootstrap CSS -->
@@ -44,7 +44,7 @@
     height: 330px;
     background-size: cover;
     background-position: center;
-    background-image: url(/assets/pro2.jpg);
+    background-image: url(assets/pro2.jpg);
    }
  </style>
 </head>
@@ -421,7 +421,7 @@ data-bs-ride="carousel"
       <div class="row">
         <!-- Company Info -->
         <div class="col-lg-3 col-md-6 mb-4">
-          <img src="/assets/footerlogo.png" alt="Cybron Logo" class="mb-3 col-lg-10 m-0 p-0">
+          <img src="assets/footerlogo.png" alt="Cybron Logo" class="mb-3 col-lg-10 m-0 p-0">
           <p class="locte text-white">404 Old Bedford Road, Luton, England LU2 7BP<br>SIC codes — 62012 United Kingdom</p>
           <p><a href="mailto:cybron@cybroninternational.com" class="text-white">cybron@cybroninternational.com</a></p>
         </div>
@@ -490,7 +490,7 @@ data-bs-ride="carousel"
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
     <!-- EXTERNEL JS FILE -->
-        <script src="/JS/app.js"></script>
+     <script src="JS/app.js"></script>
     <!-- EXTERNEL JS FILE -->
 
 </body>
