--- a/Trainers.html
+++ b/Trainers.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- FONT AWEOSEOM -->
-<link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
+<link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
-    <link rel="stylesheet" href="/CSS/style.css">
+<link rel="stylesheet" href="CSS/style.css">
     <!-- EXTERNEL CSS FILE -->
 
     <!-- Bootstrap CSS -->
@@ -25,7 +25,7 @@
  <style>
     .aboutback{
       background-color: #6095FF;
-        /* background-image: url("/assets/why.png"); */
+        /* background-image: url("assets/why.png"); */
         transform: scale(0.99.9) !important;
   transition: 6.9s ease-in-out !important;
   background-position: center !important;
@@ -62,7 +62,7 @@
     }.whycol-11{
   height: 100vh;
   background-position: center;
-  background-image: url(/assets/evulation.png);
+  background-image: url(assets/evulation.png);
 object-fit: cover;
 background-size: cover;
 }
@@ -376,7 +376,7 @@ Home / Cybron Trainers</h5>
 <div class="container-fluid flex-wrap d-flex">
   <div class="col-lg-4 col-md-6 col-12 mb-2  gap-2 ">
     <div class="col-lg-11 col-12 shadow-lg position-relative colddd">
-      <img src="/assets/team-member.jpg" class=" img-fluid col-12" alt="">
+      <img src="assets/team-member.jpg" class=" img-fluid col-12" alt="">
       <div class="text-center pt-2 bg-col text-white py-3">
         <h6 class="bg-white col-4 text-dark p-2 mx-auto rounded-3">FasihNasir</h6>
         <span class="fw-normal">desingner</span>
@@ -402,7 +402,7 @@ Home / Cybron Trainers</h5>
   </div>
   <div class="col-lg-4 col-md-6 col-12 mb-2  ">
     <div class="col-lg-11 col-12 shadow-lg position-relative colddd">
-      <img src="/assets/team-member2.jpg" class=" img-fluid col-12" alt="">
+      <img src="assets/team-member2.jpg" class=" img-fluid col-12" alt="">
       <div class="text-center pt-2 bg-col text-white py-3">
         <h6 class="bg-white col-4 text-dark p-2 mx-auto rounded-3">FasihNasir</h6>
         <span class="fw-normal">desingner</span>
@@ -428,7 +428,7 @@ Home / Cybron Trainers</h5>
   </div>
   <div class="col-lg-4 col-md-6 col-12 mb-2  ">
     <div class="col-lg-11 col-12 shadow-lg position-relative colddd">
-      <img src="/assets/team-member3.jpg" class=" img-fluid col-12" alt="">
+      <img src="assets/team-member3.jpg" class=" img-fluid col-12" alt="">
       <div class="text-center pt-2 bg-col text-white py-3">
         <h6 class="bg-white col-4 text-dark p-2 mx-auto rounded-3">FasihNasir</h6>
         <span class="fw-normal">desingner</span>
@@ -454,7 +454,7 @@ Home / Cybron Trainers</h5>
   </div>
   <div class="col-lg-4 col-md-6 col-12 mb-2  ">
     <div class="col-lg-11 col-12 shadow-lg position-relative colddd">
-      <img src="/assets/team-member4.jpg" class=" img-fluid col-12" alt="">
+      <img src="assets/team-member4.jpg" class=" img-fluid col-12" alt="">
       <div class="text-center pt-2 bg-col text-white py-3">
         <h6 class="bg-white col-4 text-dark p-2 mx-auto rounded-3">FasihNasir</h6>
         <span class="fw-normal">desingner</span>
@@ -480,7 +480,7 @@ Home / Cybron Trainers</h5>
   </div>
   <div class="col-lg-4 col-md-6 col-12 mb-2  ">
     <div class="col-lg-11 col-12 shadow-lg position-relative colddd">
-      <img src="/assets/team-member5.jpg" class=" img-fluid col-12" alt="">
+      <img src="assets/team-member5.jpg" class=" img-fluid col-12" alt="">
       <div class="text-center pt-2 bg-col text-white py-3">
         <h6 class="bg-white col-4 text-dark p-2 mx-auto rounded-3">FasihNasir</h6>
         <span class="fw-normal">desingner</span>
@@ -506,7 +506,7 @@ Home / Cybron Trainers</h5>
   </div>
   <div class="col-lg-4 col-md-6 col-12 mb-2  ">
     <div class="col-lg-11 col-12 shadow-lg position-relative colddd">
-      <img src="/assets/team-member6.jpg" class=" img-fluid col-12" alt="">
+      <img src="assets/team-member6.jpg" class=" img-fluid col-12" alt="">
       <div class="text-center pt-2 bg-col text-white py-3">
         <h6 class="bg-white col-4 text-dark p-2 mx-auto rounded-3">FasihNasir</h6>
         <span class="fw-normal">desingner</span>
@@ -608,7 +608,7 @@ Home / Cybron Trainers</h5>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
     <!-- EXTERNEL JS FILE -->
-        <script src="/JS/app.js"></script>
+     <script src="JS/app.js"></script>
     <!-- EXTERNEL JS FILE -->
 
 </body>
