--- a/bluehacking+.html
+++ b/bluehacking+.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- FONT AWEOSEOM -->
-<link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
+<link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
-    <link rel="stylesheet" href="/CSS/style.css">
+<link rel="stylesheet" href="CSS/style.css">
     <!-- EXTERNEL CSS FILE -->
 
     <!-- Bootstrap CSS -->
@@ -25,7 +25,7 @@
  <style>
     .aboutback{
       background-color: #6095FF;
-        /* background-image: url("/assets/why.png"); */
+        /* background-image: url("assets/why.png"); */
         transform: scale(0.99.9) !important;
   transition: 6.9s ease-in-out !important;
   background-position: center !important;
@@ -62,7 +62,7 @@
     }.whycol-11{
   height: 100vh;
   background-position: center;
-  background-image: url(/assets/evulation.png);
+  background-image: url(assets/evulation.png);
 object-fit: cover;
 background-size: cover;
 }
@@ -777,7 +777,7 @@ Register & Get Content
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
     <!-- EXTERNEL JS FILE -->
-        <script src="/JS/app.js"></script>
+     <script src="JS/app.js"></script>
     <!-- EXTERNEL JS FILE -->
 
 </body>
