--- a/framework.html
+++ b/framework.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- FONT AWEOSEOM -->
-<link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
+<link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
-    <link rel="stylesheet" href="/CSS/style.css">
+<link rel="stylesheet" href="CSS/style.css">
     <!-- EXTERNEL CSS FILE -->
 
     <!-- Bootstrap CSS -->
@@ -24,7 +24,7 @@
  <title>Cybron Framework– Cybron Security</title>
  <style>
     .aboutback{
-        background-image: url("/assets/ff.png");
+        background-image: url("assets/ff.png");
         transform: scale(0.99.9) !important;
   transition: 6.9s ease-in-out !important;
   background-position: center !important;
@@ -35,7 +35,7 @@
   height: 70vh;
     }
     .fr{
-        background-image: url("/assets/framework.jpg");
+        background-image: url("assets/framework.jpg");
         height: 100vh;
         background-size: cover;
         object-fit: cover;
@@ -353,7 +353,7 @@ Home / Cybron Framework </h5>
       <div class="row">
         <!-- Company Info -->
         <div class="col-lg-3 col-md-6 mb-4">
-          <img src="/assets/footerlogo.png" alt="Cybron Logo" class="mb-3 col-lg-10 m-0 p-0">
+          <img src="assets/footerlogo.png" alt="Cybron Logo" class="mb-3 col-lg-10 m-0 p-0">
           <p class="locte text-white">404 Old Bedford Road, Luton, England LU2 7BP<br>SIC codes — 62012 United Kingdom</p>
           <p><a href="mailto:cybron@cybroninternational.com" class="text-white">cybron@cybroninternational.com</a></p>
         </div>
@@ -422,7 +422,7 @@ Home / Cybron Framework </h5>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
     <!-- EXTERNEL JS FILE -->
-        <script src="/JS/app.js"></script>
+     <script src="JS/app.js"></script>
     <!-- EXTERNEL JS FILE -->
 
 </body>
